@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[jan] Synchronize tags with Kolab categories.
 [mjr] Fix deleting tasks from the task form.
 [mjr] Implement Purge Completed Tasks LoginTask (Request #2520).
 [gwr] Mark the initial default share as such with the Kolab backend.
